[package]
name = "temper"
version = "0.1.0"
authors = ["David Cao <david@teknik.io>"]

[lib]
name = "temper"
path = "src/lib.rs"

[[bin]]
name = "temper"
path = "src/bin/main.rs"

[dependencies]
clap = "2"
failure = "0.1"
memmap = "0.6"
structopt = "0.1"
structopt-derive = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rayon = "0.9"
regex = "0.2"
strfmt = "0.1"
toml = "0.4"

[dependencies.ordermap]
version = "0.3"
features = ["serde-1"]

[features]
simd-accel = ["regex/simd-accel"]

[profile.release]
lto = true
