[package]
name = "temper"
license = "BSD-3-Clause"
version = "0.1.0"
authors = ["David Cao <david@teknik.io>"]

[lib]
name = "temper"
path = "src/lib.rs"

[[bin]]
name = "temper"
path = "src/bin/main.rs"

[[bench]]
name = "bench"
harness = false

[dependencies]
bytecount = "0.2"
clap = "2"
crossbeam-channel = "0.1"
crossbeam-deque = "0.3"
failure = "0.1"
ignore = "0.4"
lazy_static = "1.0"
memchr = "2.0"
memmap = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rayon = "0.9"
regex = "0.2"
strfmt = "0.1"
termcolor = "0.3"
toml = "0.4"

[dependencies.ordermap]
version = "0.3"
features = ["serde-1"]

[dev-dependencies]
criterion = "0.2"
quickcheck = "0.6"

[features]
accel = ["regex/simd-accel", "bytecount/avx-accel", "bytecount/simd-accel"]

[profile.release]
lto = true
codegen-units = 1
